initial frontend setup and routes

--- a/frontend/class-manager/src/app/components/layout/header/header.component.html
+++ b/frontend/class-manager/src/app/components/layout/header/header.component.html
@@ -20,11 +20,10 @@
                     <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900">Pricing</a>
                 </div> -->
             </div>
-
             <!-- secondary nav -->
             <div class="hidden md:flex items-center space-x-1">
                 <a href="/login-page" class="py-5 px-3">Login</a>
-                <a href="/login-page"class="py-2 px-3 bg-yellow-400 hover:bg-yellow-300 text-yellow-900 hover:text-yellow-800 rounded transition duration-300">Signup</a>
+                <a href="/login-page"class="py-2 px-3 bg-yellow-400 hover:bg-yellow-300 text-purple-600 hover:text-purple-800 rounded transition duration-300">Signup</a>
             </div>
             <!-- mobile button goes here -->
             <div class="md:hidden flex items-center">
