updates to mainpage formatting with header and footer

--- a/frontend/class-manager/src/app/components/layout/footer/footer.component.html
+++ b/frontend/class-manager/src/app/components/layout/footer/footer.component.html
@@ -1,7 +1,7 @@
 <!--Footer container-->
 <footer
   class="flex flex-col items-center bg-zinc-50 text-center text-surface dark:bg-neutral-700 dark:text-white">
-<!--   <div class="container pt-9">
+  <div class="container pt-9">
     <div class="mb-6 flex justify-center space-x-2">
       <a
         href="#!"
@@ -83,7 +83,7 @@
         </span>
       </a>
     </div>
-  </div> -->
+  </div>
 
   <!--Copyright section-->
   <div class="w-full bg-black/5 p-4 text-center">
