--- a/frontend/class-manager/src/app/components/pages/signup-page/signup-page.component.html
+++ b/frontend/class-manager/src/app/components/pages/signup-page/signup-page.component.html
@@ -19,7 +19,8 @@
                 <div>
                     <label for="email" class="block text-sm font-medium leading-5  text-gray-700">Name</label>
                     <div class="mt-1 relative rounded-md shadow-sm">
-                        <input id="name" name="name" placeholder="John Doe" type="text" required="" value="" class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5">
+                        <input id="name" name="name" placeholder="John Doe" type="text" required="" value=""
+                            class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5">
                         <div class="hidden absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none">
                             <svg class="h-5 w-5 text-red-500" fill="currentColor" viewBox="0 0 20 20">
                                 <path fill-rule="evenodd"
@@ -32,22 +33,12 @@
                 </div>
 
                 <div class="mt-6">
-                    <label for="username" class="block text-sm font-medium leading-5 text-gray-700">Username</label>
-                    <div class="mt-1 flex rounded-md shadow-sm">
-
-                        <span class="inline-flex h-10 items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-gray-500 sm:text-sm">
-                    classmanager.com/
-                </span>
-                        <input id="username" name="username" placeholder="john" type="text" required="" value="" class="flex-1 form-input pl-3 block w-full rounded-none rounded-r-md transition duration-150 ease-in-out sm:text-sm sm:leading-5 ">
-                    </div>
-                </div>
-
-                <div class="mt-6">
                     <label for="email" class="block text-sm font-medium leading-5  text-gray-700">
-            Email address
-          </label>
+                        Email address
+                    </label>
                     <div class="mt-1 relative rounded-md shadow-sm">
-                        <input id="email" name="email" placeholder="user@example.com" type="email" required="" value="" class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5
+                        <input id="email" name="email" placeholder="user@example.com" type="email" required="" value=""
+                            class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5
                 ">
                         <div class="hidden absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none">
                             <svg class="h-5 w-5 text-red-500" fill="currentColor" viewBox="0 0 20 20">
@@ -61,28 +52,31 @@
 
                 <div class="mt-6">
                     <label for="password" class="block text-sm font-medium leading-5 text-gray-700">
-                Password
-            </label>
+                        Password
+                    </label>
                     <div class="mt-1 rounded-md shadow-sm">
-                        <input id="password" name="password" type="password" required="" class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5">
+                        <input id="password" name="password" type="password" required=""
+                            class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5">
                     </div>
                 </div>
 
                 <div class="mt-6">
                     <label for="password_confirmation" class="block text-sm font-medium leading-5 text-gray-700">
-                Confirm Password
-            </label>
+                        Confirm Password
+                    </label>
                     <div class="mt-1 rounded-md shadow-sm">
-                        <input id="password_confirmation" name="password_confirmation" type="password" required="" class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5">
+                        <input id="password_confirmation" name="password_confirmation" type="password" required=""
+                            class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5">
                     </div>
                 </div>
 
                 <div class="mt-6">
                     <span class="block w-full rounded-md shadow-sm">
-            <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out">
-              Create account
-            </button>
-          </span>
+                        <button type="submit"
+                            class="w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out">
+                            Create account
+                        </button>
+                    </span>
                 </div>
             </form>
 
