--- a/frontend/class-manager/src/styles.css
+++ b/frontend/class-manager/src/styles.css
@@ -1,4 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@layer tw-base, tw-components, tw-utilities;
+
+@import "tailwindcss/base.css" layer(tw-base);
+@import "tailwindcss/components.css" layer(tw-components);
+@import "tailwindcss/utilities.css" layer(tw-utilities);
+
+@import "primeng/resources/themes/saga-green/theme.css";
+@import "primeicons/primeicons.css";
