--- a/frontend/class-manager/src/app/components/pages/schedule/schedule.component.html
+++ b/frontend/class-manager/src/app/components/pages/schedule/schedule.component.html
@@ -1,9 +1,9 @@
-<div class="min-h-screen flex flex-col bg-gray-900 text-gray-100">
-    <!-- Navbar -->
-    <app-navbar></app-navbar>
-    <main class="flex-1 p-10 bg-gray-900 text-gray-100">
-        <div class="welcome-container text-center mb-10">
-            <h1 class="text-4xl font-bold mb-4">Schedule</h1>
-        </div>
-    </main>
+<div class="flex min-h-screen flex-col bg-background-50 text-text-900">
+  <!-- Navbar -->
+  <app-navbar></app-navbar>
+  <main class="flex-1 bg-background-50 p-10 text-text-900">
+    <div class="welcome-container mb-10 text-center">
+      <h1 class="mb-4 text-4xl font-bold">Schedule</h1>
+    </div>
+  </main>
 </div>
