--- a/frontend/class-manager/src/app/components/layout/navbar/navbar.component.html
+++ b/frontend/class-manager/src/app/components/layout/navbar/navbar.component.html
@@ -1,48 +1,69 @@
-<div class="flex justify-center mt-4">
-    <nav class="bg-gray-800 p-4 rounded-2xl shadow-md inline-flex">
-        <ul class="flex justify-center space-x-8">         
-            <li class="flex flex-col justify-center items-center">
-                <a href="/home-page" class="text-white hover:text-blue-400 transition flex flex-col items-center">
-                    <i class="pi pi-home icon-large"></i>
-                    <span class="mt-2 hidden sm:inline">Home</span>
-                </a>
-            </li>
-            <li class="flex flex-col justify-center items-center">
-                <a href="/courses-page" class="text-white hover:text-blue-400 transition flex flex-col items-center">
-                    <i class="pi pi-book icon-large"></i>
-                    <span class="mt-2 hidden sm:inline">Courses</span>
-                </a>
-            </li>
-            <li class="flex flex-col justify-center items-center">
-                <a href="/assignments-page" class="text-white hover:text-blue-400 transition flex flex-col items-center">
-                    <i class="pi pi-calendar icon-large"></i>
-                    <span class="mt-2 hidden sm:inline">Assignments</span>
-                </a>
-            </li>
-            <li class="flex flex-col justify-center items-center">
-                <a href="/grades-page" class="text-white hover:text-blue-400 transition flex flex-col items-center">
-                    <i class="pi pi-chart-line icon-large"></i>
-                    <span class="mt-2 hidden sm:inline">Grades</span>
-                </a>
-            </li>
-            <li class="flex flex-col justify-center items-center">
-                <a href="/schedule-page" class="text-white hover:text-blue-400 transition flex flex-col items-center">
-                    <i class="pi pi-clock icon-large"></i>
-                    <span class="mt-2 hidden sm:inline">Schedule</span>
-                </a>
-            </li>
-            <li class="flex flex-col justify-center items-center">
-                <a href="/gpa-page" class="text-white hover:text-blue-400 transition flex flex-col items-center">
-                    <i class="pi pi-calculator icon-large"></i>
-                    <span class="mt-2 hidden sm:inline">GPA</span>
-                </a>
-            </li>
-            <li class="flex flex-col justify-center items-center">
-                <a href="/profile-page" class="text-white hover:text-blue-400 transition flex flex-col items-center">
-                    <i class="pi pi-user icon-large"></i>
-                    <span class="mt-2 hidden sm:inline">Profile</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+<div class="mt-4 flex justify-center">
+  <nav class="inline-flex rounded-2xl bg-background-200 p-4 shadow-md">
+    <ul class="flex justify-center space-x-8">
+      <li class="flex flex-col items-center justify-center">
+        <a
+          href="/home-page"
+          class="flex flex-col items-center text-text-900 transition hover:text-blue-400"
+        >
+          <i class="pi pi-home icon-large"></i>
+          <span class="mt-2 hidden sm:inline">Home</span>
+        </a>
+      </li>
+      <li class="flex flex-col items-center justify-center">
+        <a
+          href="/courses-page"
+          class="flex flex-col items-center text-text-900 transition hover:text-blue-400"
+        >
+          <i class="pi pi-book icon-large"></i>
+          <span class="mt-2 hidden sm:inline">Courses</span>
+        </a>
+      </li>
+      <li class="flex flex-col items-center justify-center">
+        <a
+          href="/assignments-page"
+          class="flex flex-col items-center text-text-900 transition hover:text-blue-400"
+        >
+          <i class="pi pi-calendar icon-large"></i>
+          <span class="mt-2 hidden sm:inline">Assignments</span>
+        </a>
+      </li>
+      <li class="flex flex-col items-center justify-center">
+        <a
+          href="/grades-page"
+          class="flex flex-col items-center text-text-900 transition hover:text-blue-400"
+        >
+          <i class="pi pi-chart-line icon-large"></i>
+          <span class="mt-2 hidden sm:inline">Grades</span>
+        </a>
+      </li>
+      <li class="flex flex-col items-center justify-center">
+        <a
+          href="/schedule-page"
+          class="flex flex-col items-center text-text-900 transition hover:text-blue-400"
+        >
+          <i class="pi pi-clock icon-large"></i>
+          <span class="mt-2 hidden sm:inline">Schedule</span>
+        </a>
+      </li>
+      <li class="flex flex-col items-center justify-center">
+        <a
+          href="/gpa-page"
+          class="flex flex-col items-center text-text-900 transition hover:text-blue-400"
+        >
+          <i class="pi pi-calculator icon-large"></i>
+          <span class="mt-2 hidden sm:inline">GPA</span>
+        </a>
+      </li>
+      <li class="flex flex-col items-center justify-center">
+        <a
+          href="/profile-page"
+          class="flex flex-col items-center text-text-900 transition hover:text-blue-400"
+        >
+          <i class="pi pi-user icon-large"></i>
+          <span class="mt-2 hidden sm:inline">Profile</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
 </div>
