--- a/frontend/class-manager/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/class-manager/src/app/components/pages/login-page/login-page.component.html
@@ -1,54 +1,87 @@
-<div class="min-h-screen bg-gray-50 flex flex-col justify-center py-12 sm:px-6 lg:px-8 px-6">
-    <div class="sm:mx-auto sm:w-full sm:max-w-md">
-        <img class="mx-auto h-10 w-auto" src="https://www.svgrepo.com/show/301692/login.svg" alt="Workflow">
-        <h2 class="mt-6 text-center text-3xl leading-9 font-extrabold text-gray-900">
-            Sign in to your account
+<div
+  class="login-bg flex min-h-screen flex-col justify-center bg-background-100 px-6 pb-24 sm:px-6 lg:px-8"
+>
+  <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
+    <div class="bg-background-50 px-4 py-8 shadow sm:rounded-lg sm:px-10">
+      <div class="mb-8 sm:mx-auto sm:w-full sm:max-w-md">
+        <img
+          class="mx-auto h-10 w-auto"
+          src="https://www.svgrepo.com/show/301692/login.svg"
+          alt="Workflow"
+        />
+        <h2
+          class="mt-6 text-center text-3xl font-extrabold leading-9 text-text-900"
+        >
+          Sign in to your account
         </h2>
-        <p class="mt-2 text-center text-sm leading-5 text-blue-500 max-w">
-            Or
-            <a href="/signup-page"
-                class="font-medium text-blue-500 hover:text-blue-500 focus:outline-none focus:underline transition ease-in-out duration-150">
-                create a new acccount
-            </a>
+        <p class="max-w mt-2 text-center text-sm leading-5 text-primary-700">
+          Or
+          <a
+            href="/signup-page"
+            class="font-medium text-primary-700 transition duration-150 ease-in-out hover:text-primary-500 focus:underline focus:outline-none"
+          >
+            create a new acccount
+          </a>
         </p>
-    </div>
+      </div>
 
-    <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
-        <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-            <form (submit)="onSubmit($event)">
-                <div>
-                  <label for="email" class="block text-sm font-medium leading-5  text-gray-700">Email address</label>
-                  <div class="mt-1 relative rounded-md shadow-sm">
-                    <input id="email" #email name="email" placeholder="user@example.com" type="email" required=""
-                      class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5">
-                  </div>
-                </div>
-              
-                <div class="mt-6">
-                  <label for="password" class="block text-sm font-medium leading-5 text-gray-700">Password</label>
-                  <div class="mt-1 rounded-md shadow-sm">
-                    <input id="password" #password name="password" type="password" required=""
-                      class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5">
-                  </div>
-                </div>
-              
-<!--                 <div class="mt-6 flex items-center justify-between">
+      <form (submit)="onSubmit($event)">
+        <div>
+          <label
+            for="email"
+            class="block text-sm font-medium leading-5 text-text-700"
+            >Email address</label
+          >
+          <div class="relative mt-1 rounded-md shadow-sm">
+            <input
+              id="email"
+              #email
+              name="email"
+              placeholder="user@example.com"
+              type="email"
+              required=""
+              class="focus:shadow-outline-primary block w-full appearance-none rounded-md border border-text-300 bg-background-50 px-3 py-2 text-text-900 placeholder-text-400 transition duration-150 ease-in-out focus:border-text-500 focus:outline-none sm:text-sm sm:leading-5"
+            />
+          </div>
+        </div>
+
+        <div class="mt-6">
+          <label
+            for="password"
+            class="block text-sm font-medium leading-5 text-text-700"
+            >Password</label
+          >
+          <div class="mt-1 rounded-md shadow-sm">
+            <input
+              id="password"
+              #password
+              name="password"
+              type="password"
+              required=""
+              class="focus:shadow-outline-primary block w-full appearance-none rounded-md border border-text-300 bg-background-50 px-3 py-2 text-text-900 placeholder-text-400 transition duration-150 ease-in-out focus:border-text-500 focus:outline-none sm:text-sm sm:leading-5"
+            />
+          </div>
+        </div>
+
+        <!--                 <div class="mt-6 flex items-center justify-between">
                   <div class="flex items-center">
                     <input id="remember_me" #remember_me name="remember" type="checkbox" value="1"
                       class="form-checkbox h-4 w-4 text-indigo-600 transition duration-150 ease-in-out">
-                    <label for="remember_me" class="ml-2 block text-sm leading-5 text-gray-900">Remember me</label>
+                    <label for="remember_me" class="ml-2 block text-sm leading-5 text-text-900">Remember me</label>
                   </div>
                 </div> -->
-              
-                <div class="mt-6">
-                  <span class="block w-full rounded-md shadow-sm">
-                    <button type="submit"
-                      class="w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-blue-500 hover:bg-blue-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out">
-                      Sign in
-                    </button>
-                  </span>
-                </div>
-              </form>              
+
+        <div class="mt-8">
+          <span class="block w-full rounded-md shadow-sm">
+            <button
+              type="submit"
+              class="focus:shadow-outline-indigo flex w-full justify-center rounded-md border border-transparent bg-primary-500 px-4 py-2 text-sm font-medium text-text-50 transition duration-150 ease-in-out hover:bg-primary-500 focus:border-indigo-700 focus:outline-none active:bg-indigo-700 dark:text-text-950"
+            >
+              Sign in
+            </button>
+          </span>
         </div>
+      </form>
     </div>
+  </div>
 </div>
