--- a/frontend/class-manager/src/app/components/pages/main-page/main-page.component.html
+++ b/frontend/class-manager/src/app/components/pages/main-page/main-page.component.html
@@ -1,57 +1,96 @@
-<div class="min-h-screen flex flex-col bg-gray-900 text-gray-100">
-    <!-- Hero Section -->
-    <section class="flex-1 flex flex-col items-center justify-center text-center p-10 bg-gradient-to-r from-gray-800 via-gray-900 to-black">
-        <h1 class="text-6xl font-bold mb-6 animate-fade-in">Welcome to <span class="text-purple-500">Class Manager</span></h1>
-        <p class="text-2xl mb-10 animate-slide-up">Manage your courses, track your assignments, and stay on top of your grades effortlessly.</p>
-        <div class="flex space-x-8">
-            <a href="/login-page" class="py-3 px-10 bg-blue-500 text-gray-100 font-semibold rounded-lg shadow-lg hover:bg-blue-600 transition duration-300 transform hover:scale-105">Login</a>
-            <a href="/signup-page" class="py-3 px-10 bg-purple-500 text-gray-100 font-semibold rounded-lg shadow-lg hover:bg-purple-600 transition duration-300 transform hover:scale-105">Signup</a>
-        </div>
-    </section>
+<div class="flex min-h-screen flex-col bg-background-100 text-text-900">
+  <!-- Hero Section -->
+  <section
+    class="background-100 flex flex-1 flex-col items-center justify-center p-10 text-center"
+  >
+    <h1 class="animate-fade-in mb-6 text-6xl font-bold text-text-950">
+      Welcome to <span class="text-text-500">Class Manager</span>
+    </h1>
+    <p class="animate-slide-up mb-10 text-2xl">
+      Manage your courses, track your assignments, and stay on top of your
+      grades effortlessly.
+    </p>
+    <div class="flex space-x-8">
+      <a
+        href="/login-page"
+        class="transform rounded-md bg-primary-500 px-10 py-3 font-semibold text-text-100 shadow-lg transition duration-300 hover:scale-105 hover:bg-primary-600 dark:text-text-900"
+        >Login</a
+      >
+      <a
+        href="/signup-page"
+        class="transform rounded-md bg-accent-500 px-10 py-3 font-semibold text-text-100 shadow-lg transition duration-300 hover:scale-105 hover:bg-accent-600 dark:text-text-900"
+        >Signup</a
+      >
+    </div>
+  </section>
 
-    <!-- Features Section -->
-    <section class="py-16 bg-gray-800 text-gray-300">
-        <div class="container mx-auto px-6">
-            <h2 class="text-4xl font-bold text-center mb-12 animate-fade-in">Features</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
-                <div class="bg-gray-700 p-8 rounded-lg shadow-xl text-center transform transition duration-500 hover:scale-105 animate-slide-up">
-                    <i class="pi pi-book icon-large text-blue-400 mb-6" ></i>
-                    <h3 class="text-3xl font-bold mb-4">Course Management</h3>
-                    <p>Organize all your courses in one place with ease.</p>
-                </div>
-                <div class="bg-gray-700 p-8 rounded-lg shadow-xl text-center transform transition duration-500 hover:scale-105 animate-slide-up">
-                    <i class="pi pi-calendar icon-large text-purple-400 mb-6"></i>
-                    <h3 class="text-3xl font-bold mb-4">Assignment Tracking</h3>
-                    <p>Keep track of your assignments and never miss a deadline.</p>
-                </div>
-                <div class="bg-gray-700 p-8 rounded-lg shadow-xl text-center transform transition duration-500 hover:scale-105 animate-slide-up">
-                    <i class="pi pi-chart-line icon-large text-green-400 mb-6"></i>
-                    <h3 class="text-3xl font-bold mb-4">Grade Monitoring</h3>
-                    <p>Monitor your grades and track your academic progress.</p>
-                </div>
-                <div class="bg-gray-700 p-8 rounded-lg shadow-xl text-center transform transition duration-500 hover:scale-105 animate-slide-up">
-                    <i class="pi pi-clock icon-large text-red-400 mb-6"></i>
-                    <h3 class="text-3xl font-bold mb-4">Schedule Reminders</h3>
-                    <p>Get reminders for upcoming classes and deadlines.</p>
-                </div>
-                <div class="bg-gray-700 p-8 rounded-lg shadow-xl text-center transform transition duration-500 hover:scale-105 animate-slide-up">
-                    <i class="pi pi-user-plus icon-large text-pink-400 mb-6"></i>
-                    <h3 class="text-3xl font-bold mb-4">Profile Customization</h3>
-                    <p>Personalize your profile and learning experience.</p>
-                </div>
-                <div class="bg-gray-700 p-8 rounded-lg shadow-xl text-center transform transition duration-500 hover:scale-105 animate-slide-up">
-                    <i class="pi pi-calculator icon-large text-yellow-400 mb-6"></i>
-                    <h3 class="text-3xl font-bold mb-4">GPA Tracking</h3>
-                    <p>Track your current GPA and see what you need to pass.</p>
-                </div>
-            </div>
+  <!-- Features Section -->
+  <section class="bg-background-200 py-16 text-text-900">
+    <div class="container mx-auto px-6">
+      <h2 class="animate-fade-in mb-12 text-center text-4xl font-bold">
+        Features
+      </h2>
+      <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3">
+        <div
+          class="animate-slide-up transform rounded-lg bg-background-50 p-8 text-center shadow-xl transition duration-500 hover:scale-105"
+        >
+          <i class="pi pi-book icon-large mb-6 text-blue-400"></i>
+          <h3 class="mb-4 text-3xl font-bold">Course Management</h3>
+          <p>Organize all your courses in one place with ease.</p>
         </div>
-    </section>
+        <div
+          class="animate-slide-up transform rounded-lg bg-background-50 p-8 text-center shadow-xl transition duration-500 hover:scale-105"
+        >
+          <i class="pi pi-calendar icon-large mb-6 text-purple-400"></i>
+          <h3 class="mb-4 text-3xl font-bold">Assignment Tracking</h3>
+          <p>Keep track of your assignments and never miss a deadline.</p>
+        </div>
+        <div
+          class="animate-slide-up transform rounded-lg bg-background-50 p-8 text-center shadow-xl transition duration-500 hover:scale-105"
+        >
+          <i class="pi pi-chart-line icon-large mb-6 text-green-400"></i>
+          <h3 class="mb-4 text-3xl font-bold">Grade Monitoring</h3>
+          <p>Monitor your grades and track your academic progress.</p>
+        </div>
+        <div
+          class="animate-slide-up transform rounded-lg bg-background-50 p-8 text-center shadow-xl transition duration-500 hover:scale-105"
+        >
+          <i class="pi pi-clock icon-large mb-6 text-red-400"></i>
+          <h3 class="mb-4 text-3xl font-bold">Schedule Reminders</h3>
+          <p>Get reminders for upcoming classes and deadlines.</p>
+        </div>
+        <div
+          class="animate-slide-up transform rounded-lg bg-background-50 p-8 text-center shadow-xl transition duration-500 hover:scale-105"
+        >
+          <i class="pi pi-user-plus icon-large mb-6 text-pink-400"></i>
+          <h3 class="mb-4 text-3xl font-bold">Profile Customization</h3>
+          <p>Personalize your profile and learning experience.</p>
+        </div>
+        <div
+          class="animate-slide-up transform rounded-lg bg-background-50 p-8 text-center shadow-xl transition duration-500 hover:scale-105"
+        >
+          <i class="pi pi-calculator icon-large mb-6 text-yellow-400"></i>
+          <h3 class="mb-4 text-3xl font-bold">GPA Tracking</h3>
+          <p>Track your current GPA and see what you need to pass.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <!-- Call to Action Section -->
-    <section class="py-16 bg-gradient-to-r from-gray-800 via-gray-900 to-black text-gray-100 text-center">
-        <h2 class="text-4xl font-bold mb-6 animate-fade-in">Get Started Today</h2>
-        <p class="text-2xl mb-12 animate-slide-up">Join thousands of students who manage their courses with ease.</p>
-        <a href="/signup-page" class="py-3 px-10 bg-purple-500 text-gray-100 font-semibold rounded-lg shadow-lg hover:bg-purple-600 transition duration-300 transform hover:scale-105">Signup Now</a>
-    </section>
+  <!-- Call to Action Section -->
+  <section
+    class="getstarted-bg bg-background-200 to-background-100 py-16 text-center text-background-950 dark:from-background-200 dark:to-background-300"
+  >
+    <div class="z-10">
+      <h2 class="animate-fade-in mb-6 text-4xl font-bold">Get Started Today</h2>
+      <p class="animate-slide-up mb-12 text-2xl">
+        Join thousands of students who manage their courses with ease.
+      </p>
+      <a
+        href="/signup-page"
+        class="-duration-300 transform rounded-md bg-accent-500 px-10 py-3 font-semibold text-text-100 shadow-lg transition hover:scale-105 hover:bg-accent-600 dark:text-text-900"
+        >Signup Now</a
+      >
+    </div>
+  </section>
 </div>
