added changes to schedule and some background changes throughout the app

--- a/frontend/class-manager/src/app/components/pages/main-page/main-page.component.html
+++ b/frontend/class-manager/src/app/components/pages/main-page/main-page.component.html
@@ -13,12 +13,12 @@
     <div class="flex space-x-8">
       <a
         href="/login-page"
-        class="transform rounded-md bg-primary-500 px-10 py-3 font-semibold text-text-100 shadow-lg transition duration-300 hover:scale-105 hover:bg-primary-600 dark:text-text-900"
+        class="transform rounded-md bg-primary-500 px-10 py-3 font-semibold text-text-100 shadow-lg transition duration-300 hover:scale-105 hover:bg-primary-600"
         >Login</a
       >
       <a
         href="/signup-page"
-        class="transform rounded-md bg-accent-500 px-10 py-3 font-semibold text-text-100 shadow-lg transition duration-300 hover:scale-105 hover:bg-accent-600 dark:text-text-900"
+        class="transform rounded-md bg-accent-500 px-10 py-3 font-semibold text-text-100 shadow-lg transition duration-300 hover:scale-105 hover:bg-accent-600"
         >Signup</a
       >
     </div>
@@ -79,7 +79,7 @@
 
   <!-- Call to Action Section -->
   <section
-    class="getstarted-bg bg-background-200 to-background-100 py-16 text-center text-background-950 dark:from-background-200 dark:to-background-300"
+    class="getstarted-bg bg-background-200 to-background-100 py-16 text-center text-background-950"
   >
     <div class="z-10">
       <h2 class="animate-fade-in mb-6 text-4xl font-bold">Get Started Today</h2>
@@ -88,7 +88,7 @@
       </p>
       <a
         href="/signup-page"
-        class="-duration-300 transform rounded-md bg-accent-500 px-10 py-3 font-semibold text-text-100 shadow-lg transition hover:scale-105 hover:bg-accent-600 dark:text-text-900"
+        class="-duration-300 transform rounded-md bg-accent-500 px-10 py-3 font-semibold text-text-100 shadow-lg transition hover:scale-105 hover:bg-accent-600"
         >Signup Now</a
       >
     </div>
