--- a/frontend/class-manager/src/app/components/layout/footer/footer.component.html
+++ b/frontend/class-manager/src/app/components/layout/footer/footer.component.html
@@ -1,11 +1,11 @@
 <!--Footer container-->
-<footer class="text-surface flex flex-col items-center bg-background-100 text-center text-text-900 dark:bg-background-50 dark:text-text-950">
+<footer class="text-surface flex flex-col items-center bg-background-100 text-center text-text-900">
   <div class="container pt-9">
     <div class="mb-6 flex justify-center space-x-2">
       <a
         href="#!"
         type="button"
-        class="text-surface -ease-in-out rounded-full bg-transparent p-3 font-medium uppercase leading-normal !transition-none duration-150 hover:bg-background-400 focus:outline-none focus:ring-0 dark:text-white dark:hover:bg-background-200"
+        class="text-surface -ease-in-out rounded-full bg-transparent p-3 font-medium uppercase leading-normal !transition-none duration-150 hover:bg-background-400 focus:outline-none focus:ring-0"
         data-twe-ripple-init
       >
         <span class="mx-auto [&>svg]:h-5 [&>svg]:w-5">
@@ -24,7 +24,7 @@
       <a
         href="#!"
         type="button"
-        class="text-surface -ease-in-out rounded-full bg-transparent p-3 font-medium uppercase leading-normal !transition-none duration-150 hover:bg-background-400 focus:outline-none focus:ring-0 dark:text-white dark:hover:bg-background-200"
+        class="text-surface -ease-in-out rounded-full bg-transparent p-3 font-medium uppercase leading-normal !transition-none duration-150 hover:bg-background-400 focus:outline-none focus:ring-0"
         data-twe-ripple-init
       >
         <span class="mx-auto [&>svg]:h-5 [&>svg]:w-5">
@@ -43,7 +43,7 @@
       <a
         href="#!"
         type="button"
-        class="text-surface -ease-in-out rounded-full bg-transparent p-3 font-medium uppercase leading-normal !transition-none duration-150 hover:bg-background-400 focus:outline-none focus:ring-0 dark:text-white dark:hover:bg-background-200"
+        class="text-surface -ease-in-out rounded-full bg-transparent p-3 font-medium uppercase leading-normal !transition-none duration-150 hover:bg-background-400 focus:outline-none focus:ring-0"
         data-twe-ripple-init
       >
         <span class="mx-auto [&>svg]:h-5 [&>svg]:w-5">
@@ -62,7 +62,7 @@
       <a
         href="#!"
         type="button"
-        class="text-surface -ease-in-out rounded-full bg-transparent p-3 font-medium uppercase leading-normal !transition-none duration-150 hover:bg-background-400 focus:outline-none focus:ring-0 dark:text-white dark:hover:bg-background-200"
+        class="text-surface -ease-in-out rounded-full bg-transparent p-3 font-medium uppercase leading-normal !transition-none duration-150 hover:bg-background-400 focus:outline-none focus:ring-0"
         data-twe-ripple-init
       >
         <span class="mx-auto [&>svg]:h-5 [&>svg]:w-5">
@@ -81,7 +81,7 @@
       <a
         href="#!"
         type="button"
-        class="text-surface -ease-in-out rounded-full bg-transparent p-3 font-medium uppercase leading-normal !transition-none duration-150 hover:bg-background-400 focus:outline-none focus:ring-0 dark:text-white dark:hover:bg-background-200"
+        class="text-surface -ease-in-out rounded-full bg-transparent p-3 font-medium uppercase leading-normal !transition-none duration-150 hover:bg-background-400 focus:outline-none focus:ring-0"
         data-twe-ripple-init
       >
         <span class="mx-auto [&>svg]:h-5 [&>svg]:w-5">
@@ -101,7 +101,7 @@
 
   <!--Copyright section-->
   <div
-    class="w-full bg-background-100 p-4 text-center text-text-900 hover:text-primary-400 dark:bg-background-50 dark:text-text-950 dark:hover:text-primary-800"
+    class="w-full bg-background-100 p-4 text-center text-text-900 hover:text-primary-400"
   >
     © 2024 Copyright:
     <a href="https://github.com/muhammadabdullahh/class-manager-app"
