--- a/frontend/class-manager/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/class-manager/src/app/components/pages/login-page/login-page.component.html
@@ -75,7 +75,7 @@
           <span class="block w-full rounded-md shadow-sm">
             <button
               type="submit"
-              class="focus:shadow-outline-indigo flex w-full justify-center rounded-md border border-transparent bg-primary-500 px-4 py-2 text-sm font-medium text-text-50 transition duration-150 ease-in-out hover:bg-primary-500 focus:border-indigo-700 focus:outline-none active:bg-indigo-700 dark:text-text-950"
+              class="focus:shadow-outline-indigo flex w-full justify-center rounded-md border border-transparent bg-primary-500 px-4 py-2 text-sm font-medium text-text-50 transition duration-150 ease-in-out hover:bg-primary-500 focus:border-indigo-700 focus:outline-none active:bg-indigo-700"
             >
               Sign in
             </button>
